<?xml version="1.0"?>
<package format="3">
  <name>mutable_transform_publisher</name>
  <version>0.1.0</version>
  <description>
    A ROS Node in the spirit of tf's static_transform_publisher but with a service to set the transform
    while running and the ability to persist changes if desired.
  </description>

  <author email="jmeyer1292@gmail.com">Jon Meyer</author>
  <maintainer email="jmeyer1292@gmail.com">Jon Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament</buildtool_depend>
  <depend>rclcpp</depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>port_depend>
  <exec_depend>message_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
