<?xml version="1.0"?>
<package format="3">
  <name>mutable_transform_publisher</name>
  <version>0.1.0</version>
  <description>
    A ROS Node in the spirit of tf's static_transform_publisher but with a service to set the transform
    while running and the ability to persist changes if desired.
  </description>

  <author email="jmeyer1292@gmail.com">Jon Meyer</author>
  <maintainer email="jmeyer1292@gmail.com">Jon Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>mutable_transform_publisher_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>launch</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
